--- a/.github/frogbot-scan-and-fix.yml
+++ b/.github/frogbot-scan-and-fix.yml
@@ -67,7 +67,7 @@ jobs:
 
           # [Optional, default: "."]
           # Relative path to the root of the project in the Git repository
-          # JF_WORKING_DIR: path/to/project/dir
+          JF_WORKING_DIR: pyyaml_demo
 
           # [Optional]
           # Xray Watches. Learn more about them here: https://www.jfrog.com/confluence/display/JFROG/Configuring+Xray+Watches
