--- a/.github/workflows/frogbot-pr-scan.yml
+++ b/.github/workflows/frogbot-pr-scan.yml
@@ -74,7 +74,7 @@ jobs:
 
           # [Optional, default: "FALSE"]
           # Displays all existing vulnerabilities, including the ones that were added by the pull request.
-          JF_INCLUDE_ALL_VULNERABILITIES: "TRUE"
+          # JF_INCLUDE_ALL_VULNERABILITIES: ""
 
           # [Optional, default: "TRUE"]
           # Fails the Frogbot task if any security issue is found.
@@ -82,7 +82,7 @@ jobs:
 
           # [Optional]
           # Relative path to a Pip requirements.txt file. If not set, the python project's dependencies are determined and scanned using the project setup.py file.
-          JF_REQUIREMENTS_FILE: "requirements.txt"
+          # JF_REQUIREMENTS_FILE: "requirements.txt"
 
           # [Optional]
           # Frogbot will download the project dependencies if they're not cached locally. To download the
