--- a/.github/workflows/frogbot-pr-scan.yml
+++ b/.github/workflows/frogbot-pr-scan.yml
@@ -62,7 +62,7 @@ jobs:
 
           # [Optional, default: "."]
           # Relative path to the root of the project in the Git repository
-          JF_WORKING_DIR: pyyaml_demo
+          # JF_WORKING_DIR: pyyaml_demo
 
           # [Optional]
           # Xray Watches. Learn more about them here: https://www.jfrog.com/confluence/display/JFROG/Configuring+Xray+Watches
