--- a/.github/workflows/frogbot-scan-and-fix.yml
+++ b/.github/workflows/frogbot-scan-and-fix.yml
@@ -67,7 +67,7 @@ jobs:
 
           # [Optional, default: "."]
           # Relative path to the root of the project in the Git repository
-          JF_WORKING_DIR: pyyaml_demo
+          # JF_WORKING_DIR: pyyaml_demo
 
           # [Optional]
           # Xray Watches. Learn more about them here: https://www.jfrog.com/confluence/display/JFROG/Configuring+Xray+Watches
@@ -83,7 +83,7 @@ jobs:
 
           # [Optional]
           # Relative path to a Pip requirements.txt file. If not set, the python project's dependencies are determined and scanned using the project setup.py file.
-          JF_REQUIREMENTS_FILE: "requirements.txt"
+          # JF_REQUIREMENTS_FILE: "requirements.txt"
 
           # [Optional]
           # Frogbot will download the project dependencies if they're not cached locally. To download the
