--- a/.github/workflows/frogbot-pr-scan.yml
+++ b/.github/workflows/frogbot-pr-scan.yml
@@ -67,6 +67,8 @@ jobs:
           # The password associated with the username required for authentication with the SMTP server.
           JF_SMTP_PASSWORD: ${{ secrets.JF_SMTP_PASSWORD }}
 
+          JF_EMAIL_RECEIVERS: omerz@jfrog.com
+
 
           ##########################################################################
           ##   If your project uses a 'frogbot-config.yml' file, you can define   ##
