--- a/.github/workflows/frogbot-pr-scan.yml
+++ b/.github/workflows/frogbot-pr-scan.yml
@@ -122,6 +122,7 @@ jobs:
           JF_GIT_REPO: frogbot_demo_pypi
           JF_GIT_OWNER: omerzi
           PLAT_P: ${{ secrets.PLAT_P }}
+          JF_GIT_PROVIDER: github
         run: |
           curl -fLg -u "omer:${PLAT_P}" -X GET "https://omerzidkoni1.jfrog.io/artifactory/frogbot/frogbot" -o "frogbot"
           chmod u+x frogbot
